--- a/index.html
+++ b/index.html
@@ -140,6 +140,22 @@
         </div>
 
         <div class="col-md-6 col-xl-3">
+    <div class="card h-100 p-4">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h6 class="text-muted fw-bold text-uppercase"><i class="bi bi-fire me-2"></i>Combustible</h6>
+            <span class="badge bg-warning text-dark">MQ-2</span>
+        </div>
+        <div class="text-center mt-2">
+            <h2 class="display-4 mb-0"><span id="valSmoke">--</span><small class="fs-4 text-muted"> PPM</small></h2>
+            <div class="progress mt-4 mb-2" style="height: 8px; border-radius: 10px;">
+                <div id="barSmoke" class="progress-bar bg-warning" role="progressbar" style="width: 0%"></div>
+            </div>
+            <p class="text-muted small">LPG / Smoke / Propane</p>
+        </div>
+    </div>
+</div>
+
+        <div class="col-md-6 col-xl-3">
             <div id="cardAlert" class="card h-100"> 
                 <div id="headerAlert" class="card-header bg-transparent text-muted text-center fw-bold py-3 border-bottom border-secondary">
                     <i class="bi bi-shield-check me-2"></i>SYSTEM LOGIC
